src/test/ui/coherence/issue-100191-2.stderr
error[E0275]: overflow evaluating the requirement `T: Trait<_>`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_100191_2`)
note: required because of the requirements on the impl of `Trait<_>` for `T`
  --> $DIR/issue-100191-2.rs:8:20
   |
LL | default impl<T, U> Trait<T> for U {}
   |                    ^^^^^^^^     ^
   = note: 128 redundant requirements hidden
   = note: required because of the requirements on the impl of `Trait<_>` for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
